--- a/findev/postgres.yaml
+++ b/findev/postgres.yaml
@@ -4,7 +4,7 @@ metadata:
   name: findev
 spec:
   image: us.gcr.io/container-suite/crunchy-postgres-ha:centos8-13.2-ci-latest
-  openshift: true
+  openshift: false
   port: 5432
   postgresVersion: 13
   instances:
@@ -17,7 +17,7 @@ spec:
       volumeClaimSpec:
         accessModes:
         - "ReadWriteOnce"
-        storageClassName: "standard"
+        storageClassName: "waitfc"
         resources:
           requests:
             storage: 10Gi
@@ -42,7 +42,7 @@ spec:
           volumeClaimSpec:
             accessModes:
             - "ReadWriteOnce"
-            storageClassName: "standard"
+            storageClassName: "waitfc"
             resources:
               requests:
                 storage: 10Gi
